[gd_scene load_steps=9 format=3 uid="uid://anime_main_menu"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1"]
[ext_resource type="Texture2D" path="res://Backgrounds/WarsawStreetlocation.png" id="2"]
[ext_resource type="Texture2D" path="res://Characters/danilastay.png" id="3"]
[ext_resource type="Texture2D" path="res://Characters/boss_of_factory/boss_of_factory.png" id="4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 12.0
expand_margin_right = 12.0
shadow_color = Color(1, 0.6, 0.0, 0.4)
shadow_size = 5

[sub_resource type="Gradient" id="Gradient_particles"]
colors = PackedColorArray(1, 0.8, 0.9, 1, 1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 80
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(5, 5)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 2
stretch_mode = 6

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2(960, -50)
amount = 30
lifetime = 5.0
emission_shape = 3
emission_rect_extents = Vector2(1000, 1)
gravity = Vector2(0, 50)
angular_velocity_min = -20.0
angular_velocity_max = 20.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(1, 0.9, 0.9, 0.8)
color_ramp = SubResource("Gradient_particles")

[node name="Characters" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DanilaHighlight" type="TextureRect" parent="Characters"]
modulate = Color(1, 1, 0.5, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -900.0
offset_right = 700.0
grow_vertical = 0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="Danila" type="TextureRect" parent="Characters"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -900.0
offset_right = 700.0
grow_vertical = 0
pivot_offset = Vector2(300, 450)
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 5

[node name="BossHighlight" type="TextureRect" parent="Characters"]
modulate = Color(1, 0.3, 0.3, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -700.0
offset_top = -950.0
offset_right = -100.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="Boss" type="TextureRect" parent="Characters"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -700.0
offset_top = -950.0
offset_right = -100.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(300, 475)
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 210.0
grow_horizontal = 2
text = "Polish Spy Incident"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_hover")
text = "НАЧАТЬ ИГРУ"

[node name="CollectionButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_hover")
text = "КОЛЛЕКЦИЯ"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_hover")
text = "НАСТРОЙКИ"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_hover")
text = "ВЫХОД"
